--- a/content/views/advert/edit_advert_url.html
+++ b/content/views/advert/edit_advert_url.html
@@ -1,97 +1,117 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>信息管理系统</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<script type="text/javascript" src="../../scripts/jquery/jquery-1.7.1.js"></script>
-	<link href="../../style/authority/basic_layout.css" rel="stylesheet" type="text/css">
-	<link href="../../style/authority/common_style.css" rel="stylesheet" type="text/css">
-	<script type="text/javascript" src="../../scripts/authority/commonAll.js"></script>
-	<script type="text/javascript" src="../../scripts/jquery/jquery-1.4.4.min.js"></script>
-	<script type="text/javascript" src="../../scripts/jquery/ajaxfileupload.js"></script>
-	<script src="../../scripts/My97DatePicker/WdatePicker.js" type="text/javascript" defer="defer"></script>
-	<script type="text/javascript" src="../../scripts/artDialog/artDialog.js?skin=default"></script>
-	<script type="text/javascript">
-	function upload_file(){
-		$.ajaxFileUpload({
-			url : "/advert/advert/upload-img",
-			secureuri : false,
-			fileElementId : "img",
-			dataType : "text",
-			success : function(data, status){
-				data = eval("(" + data + ")");
-				
-				if(data.result){
-					$("#label")[0].innerText = "Image URL";
-					var td = $("#filename")[0];
-					
-					while(td.firstChild != null){
-						td.removeChild(td.firstChild);
-					}
-					
-					var input = document.createElement("input");
-					input.setAttribute("type", "text");
-					input.setAttribute("value", data.message);
-					input.setAttribute("name", "resourceURL");
-					input.setAttribute("class", "ui_input_txt02");
-					
-					td.appendChild(input);
-				}else{
-					alert("上传失败");
-				}
-			},
-			error : function(){
-				alert("上传失败");
-			}
-		});
-	}
-		function on_button_submit_click(){
-			var form = $('form');
-			var param = form.serialize();
-			
-			$.ajax({
-				url : "/advert/advert/new-url-advert",
-				dataType : "json",
-				data : param,
-				type : "POST",
-				success : function(data){
-					if(data.result){
-						document.location.href = "advert_list.html";
-					}else{
-						alert("添加失败");
-					}
-				},
-				error : function(){
-					alert("添加失败");
-				}
-			});
-		}
-	</script>
+    <title>信息管理系统</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <script type="text/javascript" src="../../scripts/jquery/jquery-1.7.1.js"></script>
+    <link href="../../style/authority/basic_layout.css" rel="stylesheet" type="text/css">
+    <link href="../../style/authority/common_style.css?1" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="../../scripts/authority/commonAll.js"></script>
+    <script type="text/javascript" src="../../scripts/jquery/jquery-1.4.4.min.js"></script>
+
+    <script type="text/javascript" src="../../scripts/artDialog/artDialog.js?skin=default"></script>
+
+
+    <script type="text/javascript" >
+
+        //init
+        $(function(){
+            var url = document.location.href;
+            var s = url.split("?");
+
+            if(s == null || s.length != 2){
+                alert("无效id")
+                return;
+            }
+
+            //ui
+            $("#btn_cance").click(function(){
+                history.go(-1);
+            });
+
+            $.ajax({
+                url : "/advert/advert/data-by-id",
+                dataType : "json",
+                data : s[1],
+                type : "GET",
+                success : function(data){
+                    if(data.result){
+                        $("#name").val(data.object.name);
+                        $("#id").val(data.object.id);
+                        $("#show_type").val(new Number(data.object.type)+"");
+                        $("#type").val(data.object.type);
+                      //  $("#price").val(data.object.price);
+                        $("#resourceURL").text(data.object.resourceURL);
+                        $("#targetURL").text(data.object.targetURL);
+                       // $("#system").val(data.object.system);
+                      //  $("#replace").val(data.object.replace);
+                      //  $("#memo").val(data.object.memo);
+                    	  $("#enable").val(new Number(data.object.enable)+"");
+                      
+                       
+                    }else{
+                        alert("查询失败");
+                    }
+                },
+                error : function(){
+                    alert("查询失败");
+                }
+            });
+
+
+        });
+
+        function on_button_submit_click(){
+            var form = $('form');
+            var param = form.serialize();
+
+            $.ajax({
+                url : "/advert/advert/update-url-advert",
+                dataType : "json",
+                data : param,
+                type : "POST",
+                success : function(data){
+                    if(data.result){
+                        document.location.href = "advert_list.html";
+                    }else{
+                        alert("添加失败");
+                    }
+                },
+                error : function(){
+                    alert("添加失败");
+                }
+            });
+        }
+
+    </script>
 </head>
 <body>
-	<form action="/advert/advert/new-apk-advert" method="post">
-		<div id="container">
-			<div class="ui_content">
-				<div class="ui_text_indent">
-					<div id="box_border">
-						<div id="box_top">编辑广告信息</div>
-					</div>
-				</div>
-			</div>
-			<div class="ui_content">
-				<table cellspacing="0" cellpadding="0" width="100%" align="left" border="0" class="new_web">
-					<tr>
-						<td class="ui_text_rt">广告名称</td>
-						<td class="ui_text_lt">
-							<input type="text" id="name" name="name" class="ui_input_txt02" />
-						</td>
-					</tr>
-					
-					<tr>
+<form>
+    <div id="container">
+        <div class="ui_content">
+            <div class="ui_text_indent">
+                <div id="box_border">
+                    <div id="box_top">修改网址广告信息</div>
+                </div>
+            </div>
+        </div>
+        <div class="ui_content">
+            <table cellspacing="0" cellpadding="0" width="100%" align="left" border="0" class="new_web">
+                <tr>
+                    <td class="ui_text_rt">广告名称</td>
+                    <td class="ui_text_lt">
+                        <input type="hidden" id="id" name="id" class="ui_input_txt02"  value="0"/>
+                        <input type="text" id="name" name="name" class="ui_input_txt02" />
+                    </td>
+                </tr>
+                
+                <tr>
 						<td class="ui_text_rt">广告显示类型</td>
 						<td class="ui_text_lt">
-							<select name="type" id="type" class="ui_select01">
-								<option value="0" selected="selected">横幅广告</option>
+						
+						 <input type="hidden" id="type" name="type" class="ui_input_txt02"  value="0"/>
+							<select id="show_type" class="ui_select01" disabled>
+								<option value="0" >横幅广告</option>
 								<option value="1">插屏广告</option>
 								<option value="2">开屏广告</option>
 								<option value="3">推送通知</option>
@@ -99,92 +119,76 @@
 							</select>
 						</td>
 					</tr>
-					
-					
-					<tr>
-						<td class="ui_text_rt" id="label">上传广告图片</td>
-						<td class="ui_text_lt" id="filename">
-							<input type="file" id="img" name="img" class="ui_input_txt02" />
-							<input type="button" value="上传" class="ui_input_btn01" onclick="upload_file()" />
-							<label><font color="#FF0000">（建议： 横幅长宽比6：1，开屏16：9，插屏1：1）</font> </label>
-						</td>
-					</tr>
-					
-					
-					<!--  
-					
-					<tr>
-						<td class="ui_text_rt" id="label">上传图片</td>
-						<td class="ui_text_lt" id="filename">
-							<input type="file" id="img" name="img" class="ui_input_txt02" />
-							<input type="button" value="上传" class="ui_input_btn01" onclick="upload_file()" />
-						</td>
-					</tr>
-					
-					<tr>
-						<td class="ui_text_rt" id="label">上传图片</td>
-						<td class="ui_text_lt" id="filename">
-							<input type="file" id="img" name="img" class="ui_input_txt02" />
-							<input type="button" value="上传" class="ui_input_btn01" onclick="upload_file()" />
-							<label><font color="#FF0000">（建议：横幅长宽比6：1，开屏16：9，插屏1：1）</font> </label>
-						</td>
-					</tr>
-					
-					
-					<tr>
-						<td class="ui_text_rt">价格</td>
-						<td class="ui_text_lt">
-							<input type="text" id="price" name="price" class="ui_input_txt02" />
-						</td>
-					</tr>
-					-->
-					
-					
-					<tr>
-						<td class="ui_text_rt">目标URL</td>
-						<td class="ui_text_lt">
-							<input type="text" id="targetURL" name="targetURL" class="ui_input_txt02" />
-						</td>
-					</tr>
-					
-					<!--  
-					<tr>
-						<td class="ui_text_rt">显示次数</td>
-						<td class="ui_text_lt">
-							<input type="text" id="showCount" name="showCount" class="ui_input_txt02" />
-						</td>
-					</tr>
-					<tr>
-						<td class="ui_text_rt">显示间隔</td>
-						<td class="ui_text_lt">
-							<input type="text" id="showInterval" name="showInterval" class="ui_input_txt02" />
-						</td>
-					</tr>
-					<tr>
-						<td class="ui_text_rt">广告信息描述:</td>
-						<td class="ui_text_lt">
-							<textarea id="memo" name="memo" cols="50" rows="7"></textarea>
-						</td>
-					</tr>
-					
-					-->
-					<tr>
-						<td class="ui_text_rt">状态</td>
-						<td class="ui_text_lt">
-							<select name="enable" class="ui_select01">
-								<option value="0">禁用</option>
-								<option value="1">启用</option>
-							</select>
-						</td>
-					</tr>
-					<tr>
-						<td class="ui_text_rt" colspan="2">
-							<input id="btn_submit" type="button" value="提交" class="ui_input_btn01" onclick="on_button_submit_click()" />
-						</td>
-					</tr>
-				</table>
-			</div>
-		</div>
-	</form>
+                
+                
+                 <tr>
+                    <td class="ui_text_rt" id="label_img">广告图片</td>
+                    <td class="ui_text_lt" >
+                     : <b id="resourceURL"></b>
+                    </td>
+                </tr>
+                
+                
+                <tr>
+                    <td class="ui_text_rt" id="label_url">URL</td>
+                    <td class="ui_text_lt" >
+                     : <b id="targetURL"></b>
+                    </td>
+                </tr>
+                
+                <!--  
+                <tr>
+                    <td class="ui_text_rt">价格</td>
+                    <td class="ui_text_lt">
+                        <input type="text" id="price" name="price" class="ui_input_txt02" />
+                    </td>
+                </tr>
+                <tr>
+                    <td class="ui_text_rt">是否内置</td>
+                    <td class="ui_text_lt">
+                        <select name="system" id="system" class="ui_select01">
+                            <option value="0" selected="selected">不内置</option>
+                            <option value="1">内置</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="ui_text_rt">是否替换</td>
+                    <td class="ui_text_lt">
+                        <select name="replace" id="replace" class="ui_select01">
+                            <option value="0" selected="selected">不替换</option>
+                            <option value="1">替换</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="ui_text_rt">广告信息描述:</td>
+                    <td class="ui_text_lt">
+                        <textarea id="memo" name="memo" cols="50" rows="7"></textarea>
+                    </td>
+                </tr>
+                
+                -->
+                
+                <tr>
+                    <td class="ui_text_rt">状态</td>
+                    <td class="ui_text_lt">
+                        <select name="enable"  id="enable" class="ui_select01">
+                            <option value="0">禁用</option>
+                            <option value="1">启用</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="ui_text_rt" colspan="2">
+                        <input id="btn_submit" type="button" value="提交" class="ui_input_btn01" onclick="on_button_submit_click()" />
+
+                        <input id="btn_cance" type="button" value="取消" class="ui_input_btn01" onclick="on_button_submit_click()" />
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</form>
 </body>
 </html>
