--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="518woyaofa518">
+    <wb-module deploy-name="WWSDK">
         <wb-resource deploy-path="/" source-path="/content" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/source"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/conf"/>
         <property name="context-root" value="/"/>
-        <property name="java-output-path" value="/518woyaofa518/build/classes"/>
+        <property name="java-output-path" value="/WWSDK/build/classes"/>
     </wb-module>
 </project-modules>
