--- a/content/views/advert/new_advert_push.html
+++ b/content/views/advert/new_advert_push.html
@@ -87,7 +87,7 @@
 			var param = form.serialize();
 			
 			$.ajax({
-				url : "/advert/advert/new-apk-advert",
+				url : "/advert/pushAdvert",
 				dataType : "json",
 				data : param,
 				type : "POST",
@@ -111,94 +111,29 @@
 			<div class="ui_content">
 				<div class="ui_text_indent">
 					<div id="box_border">
-						<div id="box_top">创建广告信息</div>
+						<div id="box_top">推送广告</div>
 					</div>
 				</div>
 			</div>
 			<div class="ui_content">
 				<table cellspacing="0" cellpadding="0" width="100%" align="left" border="0" class="new_web">
 					<tr>
-						<td class="ui_text_rt">广告名称</td>
+						<td class="ui_text_rt">推送标题</td>
 						<td class="ui_text_lt">
-							<input type="text" id="name" name="name" class="ui_input_txt02" />
-						</td>
-					</tr>
-					
-						
-					<tr>
-						<td class="ui_text_rt">广告显示类型</td>
-						<td class="ui_text_lt">
-							<select name="type" id="type" class="ui_select01">
-								<option value="0" selected="selected">横幅广告</option>
-								<option value="1">插屏广告</option>
-								<option value="2">开屏广告</option>
-							</select>
-						</td>
-					</tr>
-					
-					
-				<tr>
-						<td class="ui_text_rt" id="label">上传广告图片</td>
-						<td class="ui_text_lt" id="filename">
-							<input type="file" id="img" name="img" class="ui_input_txt02" />
-							<input type="button" value="上传" class="ui_input_btn01" onclick="upload_img()" />
-							<label><font color="#FF0000">（建议： 横幅长宽比6：1，开屏16：9，插屏1：1）</font> </label>
+							<input type="text" id="subject" name="subject" class="ui_input_txt02" />
 						</td>
 					</tr>
 					
 					<tr>
-						<td class="ui_text_rt" id="label_apk">上传应用</td>
-						<td class="ui_text_lt" id="apkfilename">
-							<input type="file" id="apk" name="apk" class="ui_input_txt02" />
-							<input type="button" value="上传" class="ui_input_btn01" onclick="upload_file()" />
-						</td>
-					</tr>
-					
-					<!--  
-					<tr>
-						<td class="ui_text_rt">价格</td>
+						<td class="ui_text_rt">推送内容</td>
 						<td class="ui_text_lt">
-							<input type="text" id="price" name="price" class="ui_input_txt02" />
+							<textarea name="body" cols="50" rows="7"></textarea>
 						</td>
 					</tr>
-					<tr>
-						<td class="ui_text_rt">是否内置</td>
-						<td class="ui_text_lt">
-							<select name="system" id="system" class="ui_select01">
-								<option value="0" selected="selected">不内置</option>
-								<option value="1">内置</option>
-							</select>
-						</td>
-					</tr>
-					<tr>
-						<td class="ui_text_rt">是否替换</td>
-						<td class="ui_text_lt">
-							<select name="replace" id="replace" class="ui_select01">
-								<option value="0" selected="selected">不替换</option>
-								<option value="1">替换</option>
-							</select>
-						</td>
-					</tr>
-					<tr>
-						<td class="ui_text_rt">广告信息描述:</td>
-						<td class="ui_text_lt">
-							<textarea id="memo" name="memo" cols="50" rows="7"></textarea>
-						</td>
-					</tr>
-					
-					-->
-					<tr>
-						<td class="ui_text_rt">状态</td>
-						<td class="ui_text_lt">
-							<select name="enable" class="ui_select01">
-								<option value="0">禁用</option>
-								<option value="1">启用</option>
-							</select>
-						</td>
-					</tr>
+				
 					<tr>
 						<td class="ui_text_rt" colspan="2">
-							<input id="btn_submit" type="button" value="提交" class="ui_input_btn01" onclick="on_button_submit_click()" />
+							<input id="btn_submit" type="button" value="立即推送" class="ui_input_btn01" onclick="on_button_submit_click()" />
 						</td>
 					</tr>
 				</table>
