--- a/content/views/advert/edit_advert_file.html
+++ b/content/views/advert/edit_advert_file.html
@@ -113,6 +113,7 @@
 								<option value="0" >横幅广告</option>
 								<option value="1">插屏广告</option>
 								<option value="2">开屏广告</option>
+								<option value="3">推送广告</option>
 							</select>
 						</td>
 					</tr>
