--- a/content/views/advert/new_advert_push.html
+++ b/content/views/advert/new_advert_push.html
@@ -31,7 +31,7 @@
 			$("#type_url")[0].show();
 			
 		}else{
-			$("#type_url")[0].hidden()";
+			$("#type_url")[0].hidden();
 			$("#type_apk")[0].show();
 			
 		}
