完成推送，包名解析

--- a/content/views/advert/new_advert_push.html
+++ b/content/views/advert/new_advert_push.html
@@ -27,12 +27,12 @@
 		var v = $("#push_type")[0].value;
 		if(v == 1){
 			
-			$("#type_apk")[0].hidden();
-			$("#type_url")[0].show();
+			$("#type_apk").hide();
+			$("#type_url").show();
 			
 		}else{
-			$("#type_url")[0].hidden();
-			$("#type_apk")[0].show();
+			$("#type_url").hide();
+			$("#type_apk").show();
 			
 		}
 		
